# idea-surfer

./: README.MD
backend/: .gitignore  NextSteps.md  README.md  pyproject.toml
backend/app/: README.md  main.py  pyproject.toml
backend/app/graph/: 3d.py
backend/app/models/: project.py
backend/app/routes/: chat.py  scraper_routes.py  search.py
backend/app/services/db/: supa_base_client.py
backend/app/services/embedder/: devembedder.py  embedder.py
backend/app/services/scraper/: devpost.py  productHunt.py  topstartups.py  yc.py
backend/app/services/visualizer/: visualize.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/search/: layout.tsx  page.tsx
frontend/components/ui/: dialog.tsx  idea-chatbot.tsx  idea-search-button.tsx  loading.tsx  projectcard.tsx  projectmodal.tsx
