[project]
name = "IdeaSurf"
version = "0.1.0"
description = "IdeaSurf API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.121.0",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "uvicorn>=0.38.0",
    "webdriver-manager>=4.0.2",
]
