[project]
name = "IdeaSurf"
version = "0.1.0"
description = "IdeaSurf API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.121.0",
    "fastapi-limiter>=0.1.6",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "pydantic>=2.12.4",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "selenium>=4.38.0",
    "supabase>=2.23.3",
    "uvicorn>=0.38.0",
    "webdriver-manager>=4.0.2",
]
